@@ -1,12 +1,22 @@
-# tv_grab_az_sdjson_sqlite
+# tv_grab_az_sdjson_sqlite / tv_meta_az_sd.py
 XMLTV grabber for Schedules Direct JSON service with local caching of xmltv output.
+Plus Tvheadend metadata program for populating fanart for Kodi.
 
 Overview
 --------
 
-This program grabs schedule information from SchedulesDirect and
-creates an xmltv file for use by PVRs (such as Tvheadend and
-MythTV). You need a SchedulesDirect account for this program to work.
+The tv_grab_az_sdjson_sqlite program grabs schedule information from
+SchedulesDirect and creates an xmltv file for use by PVRs (such as
+Tvheadend and MythTV).
+
+The tv_meta_az_sd.py integrates with "tvhmeta" in Tvheaded 4.3+ to
+provide additional fanart for Kodi 18+. It needs to be put in the same
+directory as Tvheadend's "tvhmeta" program, and the Tvheadend
+recording pre-processor command needs to be changed to
+`tvhmeta --uuid %U` and the program will be loaded by
+tvhmeta and called with the correct configuration.
+
+You need a SchedulesDirect account for these programs to work.
 Information from SchedulesDirect is stored in a local SQLite database.
 Generated information can also be cached locally to improve performance.
 
