@@ -11,6 +11,7 @@ User-visible and notable changes. For new options, see the README.md.
 - New options "--channel-short-days-exclude-regex" and "--channel-short-days" to allow uninteresting channels to have shorter guide information, reducing PVR memory usage.
 - New option "--benchmark" to log timing information for users.
 - Artwork for long running shows and artwork that failed to download is automatically periodically refreshed.
+- Additional script added for Tvheadend4.3+ (tv_meta_az_sd) for setting fanart on recordings. Place it in the same directory as "tvhmeta" and update the pre-processor command in Tvheadend to be "tvhmeta --uuid %U". The Tvheadend script will then use the tv_meta_az_sd to supply extra fanart to Kodi 18+.
 
 * 201802
 - New option "--update-description-with-all" (and others, see README.md) to put extra cast and rating information in the description. Useful for PVRs that don't display season/episode/rating information.
